# LaTeX_OCR

./: .gitignore  LaTeXOCR.org  pyproject.toml
