[tool.poetry]
name = "latex-ocr"
version = "0.1.0"
description = "Latex handwritten symbol recognition"
authors = ["Kopnov Alexandr <a.kopnov24@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.16.1"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
